# rust_cli

./: Cargo.toml  history.txt
src/: command_handler.rs  commands.rs  completer.rs  main.rs
