[package]
name = "rust_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "fs", "macros"] }
tokio-tungstenite = "0.23.1"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2.2"
clap = { version = "4.5.7", features = ["derive"] }
rustyline = "14.0.0"